5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4163/executions/1836_1274.log
== TEST (2019-06-18 13:09:12) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero"))


mat = ones(,n,n dtype= int)
print(mat)
-- ERROR:
File "XXXX", line 8
    mat = ones(,n,n dtype= int)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-18 13:09:37) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero"))


mat = ones((n,n) dtype= int)
print(mat)
-- ERROR:
File "XXXX", line 8
    mat = ones((n,n) dtype= int)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-18 13:11:52) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero"))


mat = ones((n,n)dtype= int)
print(mat)
-- ERROR:
File "XXXX", line 8
    mat = ones((n,n)dtype= int)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-18 13:12:12) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero"))


mat = ones((n,n)dtype=int)
print(mat)
-- ERROR:
File "XXXX", line 8
    mat = ones((n,n)dtype=int)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-18 13:12:30) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero"))


mat = ones((n,n))
print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-18 13:14:42) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero"))


mat = ones((n,n)dtype=int)
print(mat)
-- ERROR:
File "XXXX", line 8
    mat = ones((n,n)dtype=int)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-18 13:15:39) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero"))


mat = ones((n,n),dtype=int)
print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-18 13:22:48) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero"))


mat = ones((n,n),dtype=int)

for i in range(n):
	mat[1+i:1+i] = mat[1+i:1+i] +1


print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-18 13:23:02) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero"))


mat = ones((n,n),dtype=int)

for i in range(n):
	mat[1+i:1+i] = mat[1+i:1+i] + 1


print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-18 13:23:12) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero"))


mat = ones((n,n),dtype=int)

for i in range(n):
	mat[1+i:1+i] = mat[1+i:1+i] + 2


print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-18 13:24:07) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero"))


mat = ones((n,n),dtype=int)

for i in range(n):
	aux = mat[1+i:1+i] + 2
	mat = [1+i:1+i]


print(mat)
-- ERROR:
File "XXXX", line 12
    mat = [1+i:1+i]
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-18 13:24:31) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero"))


mat = ones((n,n),dtype=int)

for i in range(n):
	aux = mat[1+i:1+i] + 2
	mat[1+i:1+i] = aux


print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-19 13:44:42) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero"))


mat = ones((n,n),dtype=int)

for j in range(n):
	aux = mat[1+j:1+j] + 2
	mat[1+j:1+j] = aux


print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:00:50) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))


mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)

for i in range(n):
	new[i] = mat[i] + 1
	
print(new)
	


print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:01:20) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))


mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)

for j in range(n):
	new[i] = mat[i] + 1
	
print(new)
	


print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:01:34) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))


mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)

for j in range(n):
	new[j] = mat[j] + 1
	
print(new)
	


print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:02:04) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))


mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)

for j in range(n+2):
	new[j] = mat[j] + 1
	
print(new)
	


print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:02:16) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))


mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)

for j in range(n+1):
	new[j] = mat[j] + 1
	
print(new)
	


print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:02:32) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))


mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)

for j in range(n):
	new[j] = mat[j] + 1
	
print(new)
	


print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:12:58) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))


mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)

for i in range(n):
	for j in range(n):
		new [i] = mat[i,j+1]+1 
	
	
print(new)
	


print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:13:40) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))


mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)

for i in range(n):
	for j in range(n):
		new [i] = mat[i,j+1]+1 
	
	
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:14:02) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))


mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)

for i in range(n):
	for j in range(n):
		new[i]= mat[i,j]+1 
	
	
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:15:15) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))


mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)

for i in range(n):
	for j in range(n):
		a = 1
		new[i]= mat[i,j+a]+1 
	
	
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:16:03) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))


mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)

for i in range(n):
	for j+1 in range(n):
		a = 1
		new[i]= mat[i,j] + 1 
	
	
print(new)
	
-- ERROR:
File "XXXX", line 12
    for j+1 in range(n):
       ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:16:25) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))


mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)

for i in range(n):
	for j in range(n+1):
		a = 1
		new[i]= mat[i,j] + 1 
	
	
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:16:40) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))


mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)

for i in range(n):
	for j in range(n-1):
		a = 1
		new[i]= mat[i,j] + 1 
	
	
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:19:23) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))


mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)
a = 0
for i in range(n):
	for j in range(n):
		new[i]= mat[i,j] + a
		a = a + 1
	
	
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:20:02) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))


mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)
a = 0
for i in range(n):
	for j in range(n):
		new[j]= mat[i,j] + a
		a = a + 1
	
	
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:21:09) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))


mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)
a = 0
for i in range(n):
	for j in range(n):
		new[i]= mat[i] + a
		a = a + 1
	
	
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:21:51) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))


mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)
a = 0
for i in range(n):
	for j in range(n):
		new[i]= mat[i] + a
		a = a + 1
	
	
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:22:31) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))


mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)
a = 0
for i in range(n):
	for j in range(n):
		new[j]= mat[j] + a
		a = a + 1
	
	
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:24:05) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))


mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)
a = 0
for i in range(n):
	for j in range(n):
		new[j]= mat[j]
		a = a + 1
	
	
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:24:24) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))


mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)
a = 0
for i in range(n):
	for j in range(n):
		new[j]= mat[j]+ a
		a = a + 1
	
	
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:24:36) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))


mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)
a = 0
for i in range(n):
	for j in range(n):
		new[j]= mat[j]+ 1
		a = a + 1
	
	
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:25:35) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))


mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)
a = 0
for i in range(n):
	for j in range(n):
		new[j]= mat[j]
		a = a + 1
	
	
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:26:57) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))


mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)
a = 0
for i in range(n):
	for j in range(n):
		if j > 0:
			new[j]= mat[j] + a
			a = a + 1
	
	
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:28:21) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))


mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)
a = 0
for i in range(n):
	for j in range(n):
		if j = 0:
			new[j]= mat[j] + 1
	
	
print(new)
	
-- ERROR:
File "XXXX", line 13
    if j = 0:
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:28:31) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))


mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)
a = 0
for i in range(n):
	for j in range(n):
		if j == 0:
			new[j]= mat[j] + 1
	
	
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:28:47) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))


mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)
a = 0
for i in range(n):
	for j in range(n):
		if j == 0:
			new[j]= mat[j] 
	
	
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:33:46) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))


mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)
a = 0
for j in range(N):
	for i in range(N):
		if j == 0:
			new[j]= mat[j] 
	
	
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:34:18) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))


mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)
a = 0
for j in range(n):
	for i in range(n):
		if j == 0:
			new[j]= mat[j] 
	
	
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:34:38) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))


mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)
a = 0
for j in range(n):
	for i in range(n):
		if j == 0:
			new[i]= mat[i] 
	
	
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:35:56) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))


mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)
a = 0
for j in range(n):
	for i in range(n):
		if j == 0:
			new[i,j] = mat[i] 
	
	
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:36:14) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))


mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)
a = 0
for j in range(n):
	for i in range(n):
		if j == 0:
			new[i,j] = 1 
	
	
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:38:25) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))


mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)
a = 0
for j in range(n):
	for i in range(n):
		if j == 0:
			new[i,j] = 1 
		elif j==1 and i ==1:
			new[i,j] = 1
			
	
	
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:39:10) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))


mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)
a = 0
for j in range(n):
	for i in range(n):
		if j == 0:
			new[i,j] = 1 
		elif j!=0 and i ==0:
			new[i,j] = 1
			
	
	
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:40:12) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))


mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)
a = 0
for j in range(n):
	for i in range(n):
		if j == 0:
			new[i,j] = 1 
		elif j!=0 and i ==0:
			new[i,j] = 1
			
	
	
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:43:00) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))


mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)
a = 0
for j in range(n):
	for i in range(n):
		if j == 0:
			new[i,j] = 1 
		elif j!=0 and i ==0:
			new[i,j] = 1
		elif i==1:
			new[i,j] =​ 2
			
	
	
print(new)
	
-- ERROR:
File "XXXX", line 18
    new[i,j] =​ 2
              ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:43:11) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))


mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)
a = 0
for j in range(n):
	for i in range(n):
		if j == 0:
			new[i,j] = 1 
		elif j!=0 and i ==0:
			new[i,j] = 1
		elif i==1:
			new[i,j] = 2
			
	
	
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:43:29) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))


mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)
a = 0
for j in range(n):
	for i in range(n):
		if j == 0:
			new[i,j] = 1 
		elif j!=0 and i ==0:
			new[i,j] = 1
		elif i==1:
			new[i,j] = 2
			
	
	
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:44:50) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))


mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)
a = 0
for j in range(n):
	for i in range(n):
		if j == 0:
			new[i,j] = 1 
		elif j!=0 and i ==0:
			new[i,j] = 1
		elif i==1:
			new[i,j] = 2
		elif i == 2:
			new[i,j] = 3
			
	
	
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:46:35) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))


mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)
a = 0
for j in range(n):
	for i in range(n):
		if j == 0:
			new[i,j] = 1 
		elif j!=0 and i ==0:
			new[i,j] = 1
		elif i==1 and j == 1:
			new[i,j] = 2
		elif i == 2:
			new[i,j] = 3
			
	
	
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:47:07) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))


mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)
a = 0
for j in range(n):
	for i in range(n):
		if j == 0:
			new[i,j] = 1 
		elif j!=0 and i ==0:
			new[i,j] = 1
		elif i==1 or j == 1:
			new[i,j] = 2
		elif i == 2:
			new[i,j] = 3
			
	
	
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:48:03) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))


mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)
a = 0
for j in range(n):
	for i in range(n):
		if j == 0:
			new[i,j] = 1 
		elif j!=0 and i ==0:
			new[i,j] = 1
		elif i==1 or j == 1:
			new[i,j] = 2
		elif i == 2 or j == 2:
			new[i,j] = 3
			
	
	
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:50:11) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))


mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)
a = 0
for j in range(n):
	for i in range(n):
		if j == 0:
			new[i,j] = 1 
		elif j!=0 and i ==0:
			new[i,j] = 1
		elif i==1 or j == 1:
			new[i,j] = 2
		elif i == 2 or j == 2:
			new[i,j] = 3
		elif i == 3 or j == 3:
			new[i,j] = 4
			
	
	
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:51:06) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))


mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)
a = 0
for j in range(n):
	for i in range(n):
		if j == 0:
			new[i,j] = 1 
		elif j!=0 and i ==0:
			new[i,j] = 1
		elif i==1 or j == 1:
			new[i,j] = 2
		elif i == 2 or j == 2:
			new[i,j] = 3
		elif i == 3 or j == 3:
			new[i,j] = 4
		elif i == 4 or j == 4:
			new[i,j] = 5
	
	
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:51:17) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))


mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)
a = 0
for j in range(n):
	for i in range(n):
		if j == 0:
			new[i,j] = 1 
		elif j!=0 and i ==0:
			new[i,j] = 1
		elif i==1 or j == 1:
			new[i,j] = 2
		elif i == 2 or j == 2:
			new[i,j] = 3
		elif i == 3 or j == 3:
			new[i,j] = 4
		elif i == 4 or j == 4:
			new[i,j] = 5
	
	
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 13:51:38) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))


mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)
a = 0
for j in range(n):
	for i in range(n):
		if j == 0:
			new[i,j] = 1 
		elif j!=0 and i ==0:
			new[i,j] = 1
		elif i==1 or j == 1:
			new[i,j] = 2
		elif i == 2 or j == 2:
			new[i,j] = 3
		elif i == 3 or j == 3:
			new[i,j] = 4
		elif i == 4 or j == 4:
			new[i,j] = 5
	
	
print(new)
	
-- EXECUTION TIME:
1.08828
-- TEST CASE 1:
---- input:
3
---- correct output:
[[1 1 1]
 [1 2 2]
 [1 2 3]]
---- user output:
[[1 1 1]
 [1 2 2]
 [1 2 3]]
-- TEST CASE 2:
---- input:
8
---- correct output:
[[1 1 1 1 1 1 1 1]
 [1 2 2 2 2 2 2 2]
 [1 2 3 3 3 3 3 3]
 [1 2 3 4 4 4 4 4]
 [1 2 3 4 5 5 5 5]
 [1 2 3 4 5 6 6 6]
 [1 2 3 4 5 6 7 7]
 [1 2 3 4 5 6 7 8]]
---- user output:
[[1 1 1 1 1 1 1 1]
 [1 2 2 2 2 2 2 2]
 [1 2 3 3 3 3 3 3]
 [1 2 3 4 4 4 4 4]
 [1 2 3 4 5 5 5 5]
 [1 2 3 4 5 0 0 0]
 [1 2 3 4 5 0 0 0]
 [1 2 3 4 5 0 0 0]]
-- TEST CASE 3:
---- input:
1
---- correct output:
[[1]]
---- user output:
[[1]]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:56:21) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))


mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)
a = 0
for j in range(n):
	for i in range(n):
		if j==a and i ==a:
			new[i,j] = a + 1
		elif i== a or j == a:
			new[i,j] =  a +1
		elif i == a or j == a:
			new[i,j] = a + 1
		elif i == a or j == a:
			new[i,j] = a + 1
		elif i == a or j == a:
			new[i,j] = a+1
	
	
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:56:48) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))


mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)
a = 0
for j in range(n):
	for i in range(n):
		if j==a and i ==a:
			new[i,j] = a + 1
		elif i== a or j == a:
			new[i,j] =  a +1
		elif i == a or j == a:
			new[i,j] = a + 1
		elif i == a or j == a:
			new[i,j] = a + 1
		elif i == a or j == a:
			new[i,j] = a+1
		a = a + 1
	
	
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:57:23) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))


mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)
a = 0
for j in range(n):
	for i in range(n):
		if j==a and i ==a:
			new[i,j] = a + 1
		elif i== a or j == a:
			new[i,j] =  a +1
		elif i == a or j == a:
			new[i,j] = a + 1
		elif i == a or j == a:
			new[i,j] = a + 1
		elif i == a or j == a:
			new[i,j] = a+1
		a = a + 1
	
	
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:58:16) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))


mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)
a = 0
for j in range(n):
	for i in range(n):
		if j==a or i ==a:
			new[i,j] = a + 1
		elif i== a or j == a:
			new[i,j] =  a +1
		elif i == a or j == a:
			new[i,j] = a + 1
		elif i == a or j == a:
			new[i,j] = a + 1
		elif i == a or j == a:
			new[i,j] = a+1
		a = a + 1
	
	
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:59:21) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))


mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)
a = 0
for j in range(n):
	for i in range(n):
		if j==a:
			new[i,j] = a + 1
		elif i==a:
			new[i,j] = a + 1
		elif i== a or j == a:
			new[i,j] =  a +1
		elif i == a or j == a:
			new[i,j] = a + 1
		elif i == a or j == a:
			new[i,j] = a + 1
		elif i == a or j == a:
			new[i,j] = a+1
		a = a + 1
	
	
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:59:42) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))


mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)
a = 0
for j in range(n):
	for i in range(n):
		if j==a:
			new[i] = a + 1
		elif i==a:
			new[i,j] = a + 1
		elif i== a or j == a:
			new[i,j] =  a +1
		elif i == a or j == a:
			new[i,j] = a + 1
		elif i == a or j == a:
			new[i,j] = a + 1
		elif i == a or j == a:
			new[i,j] = a+1
		a = a + 1
	
	
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:59:58) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))


mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)
a = 0
for j in range(n):
	for i in range(n):
		if j==a:
			new[i] = a + 1
		elif i==a:
			new[j] = a + 1
		elif i== a or j == a:
			new[i,j] =  a +1
		elif i == a or j == a:
			new[i,j] = a + 1
		elif i == a or j == a:
			new[i,j] = a + 1
		elif i == a or j == a:
			new[i,j] = a+1
		a = a + 1
	
	
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 14:00:28) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))


mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)
a = 0
for j in range(n):
	for i in range(n):
		if j==a:
			new[i] = a + 1
		elif i==a:
			new[,j] = a + 1
		elif i== a or j == a:
			new[i,j] =  a +1
		elif i == a or j == a:
			new[i,j] = a + 1
		elif i == a or j == a:
			new[i,j] = a + 1
		elif i == a or j == a:
			new[i,j] = a+1
		a = a + 1
	
	
print(new)
	
-- ERROR:
File "XXXX", line 16
    new[,j] = a + 1
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 14:00:37) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))


mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)
a = 0
for j in range(n):
	for i in range(n):
		if j==a:
			new[i] = a + 1
		elif i==a:
			new[i,j] = a + 1
		elif i== a or j == a:
			new[i,j] =  a +1
		elif i == a or j == a:
			new[i,j] = a + 1
		elif i == a or j == a:
			new[i,j] = a + 1
		elif i == a or j == a:
			new[i,j] = a+1
		a = a + 1
	
	
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 14:06:00) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))


mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)
a = 0
for j in range(n):
	for i in range(n):
		if j==a:
			new[i] = a + 1
		elif i==a:
			new[i,j] = a + 1
		elif i== a or j != a:
			new[i,j] =  a +1
		elif i == a or j == a:
			new[i,j] = a + 1
		elif i == a or j == a:
			new[i,j] = a + 1
		elif i == a or j == a:
			new[i,j] = a+1
		a = a + 1
	
	
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 14:06:11) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))


mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)
a = 0
for j in range(n):
	for i in range(n):
		if j==a:
			new[i] = a + 1
		elif i==a:
			new[i,j] = a + 1
		elif i== a or j != 0:
			new[i,j] =  a +1
		elif i == a or j == a:
			new[i,j] = a + 1
		elif i == a or j == a:
			new[i,j] = a + 1
		elif i == a or j == a:
			new[i,j] = a+1
		a = a + 1
	
	
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:06:22) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))


mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)
a = 0
for j in range(n):
	for i in range(n):
		if j==a:
			new[i] = a + 1
		elif i==0:
			new[i,j] = a + 1
		elif i== 1 or j != 0:
			new[i,j] =  a +1
		elif i == 2 or j == 2:
			new[i,j] = a + 1
		elif i == 3 or j == 3:
			new[i,j] = a + 1
		elif i == 4 or j == 4:
			new[i,j] = a+1
		a = a + 1
	
	
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:07:10) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))


mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)
a = 0
for j in range(n):
	for i in range(n):
		if j==0:
			new[i] = a + 1
		elif i==0:
			new[i,j] = a + 1
		elif i== 1 or j != 0:
			new[i,j] =  a +1
		elif i == 2 or j == 2:
			new[i,j] = a + 1
		elif i == 3 or j == 3:
			new[i,j] = a + 1
		elif i == 4 or j == 4:
			new[i,j] = a+1
		a = a + 1
	
	
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:09:02) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))


mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)
for j in range(n):
	for i in range(n):
		if j==0:
			new[i] = 1
		elif i==0:
			new[i,j] = 1
		elif i== 1 or j != 0:
			new[i,j] =  a +1
		elif i == 2 or j == 2:
			new[i,j] = a + 1
		elif i == 3 or j == 3:
			new[i,j] = a + 1
		elif i == 4 or j == 4:
			new[i,j] = a+1
		a = a + 1
	
	
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:13:47) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))


mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)
for j in range(n):
	for i in range(n):
		if j==0:
			new[i] = 1
		elif i==0:
			new[i,j] = 1
		elif i== 1 or j != 0:
			new[i,j] =  2
		elif i == 2 or j == 2:
			new[i,j] = 3
		elif i == 3 or j == 3:
			new[i,j] = 4
		elif i == 4 or j == 4:
			new[i,j] = 
		a = a + 1
	
	
print(new)
	
-- ERROR:
File "XXXX", line 23
    new[i,j] = 
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:14:09) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))


mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)
for j in range(n):
	for i in range(n):
		if j==0:
			new[i] = 1
		elif i==0:
			new[i,j] = 1
		elif i== 1 or j != 0:
			new[i,j] =  2
		elif i == 2 or j == 2:
			new[i,j] = 3
		elif i == 3 or j == 3:
			new[i,j] = 4
		elif i == 4 or j == 4:
			new[i,j] = 5
		
	
	
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:49:40) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))


mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)
for j in range(n):
	for i in range(n):
		if j==0:
			new[i] = 1
		elif i==0:
			new[i,j] = 1
		elif i== 1 or j != 0:
			new[i,j] =  2
		elif i == 2 or j == 2:
			new[i,j] = 3
		elif i == 3 or j == 3:
			new[i,j] = 4
		elif i == 4 or j == 4:
			new[i,j] = 5
		
	
	
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:51:20) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))


mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)
for j in range(n):
	for i in range(n):
		if j==0 or i==0:
			new[i] = 1
		elif i== 1 or j != 0:
			new[i,j] = 2
		elif i == 2 or j == 2:
			new[i,j] = 3
		elif i == 3 or j == 3:
			new[i,j] = 4
		elif i == 4 or j == 4:
			new[i,j] = 5
		
	
	
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:51:40) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))


mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)
for j in range(n):
	for i in range(n):
		if j==0 or i==0:
			new[i] = 1
		elif i== 1 or j != 1:
			new[i,j] = 2
		elif i == 2 or j == 2:
			new[i,j] = 3
		elif i == 3 or j == 3:
			new[i,j] = 4
		elif i == 4 or j == 4:
			new[i,j] = 5
		
	
	
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:52:07) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))


mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)
for j in range(n):
	for i in range(n):
		if j==0 or i==0:
			new[i] = 1
		elif i== 1 or j == 1:
			new[i,j] = 2
		elif i == 2 or j == 2:
			new[i,j] = 3
		elif i == 3 or j == 3:
			new[i,j] = 4
		elif i == 4 or j == 4:
			new[i,j] = 5
		
	
	
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:54:42) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))
a = 0

mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)
for j in range(n):
	for i in range(n):
		if j==0 or i==0:
			new[i] = 1
		elif i== 1 or j == 1:
			new[i,j] = 2
		elif i == 2 or j == 2:
			new[i,j] = 3
		elif i == 3 or j == 3:
			new[i,j] = 4
		elif i == 4 or j == 4:
			new[i,j] = 5
		a = a + 1
		print(a)
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:46:07) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))
a = 0

mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)
for i in range(n):
	for j in range(n):
		new[i,j] = min(new[i,j])+1
		
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:47:00) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))
a = 0

mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)
for i in range(n):
	for j in range(n):
		new[i,j] = min(new[i,j]) + 1
		
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:47:54) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))
a = 0

mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)
for i in range(n):
	for j in range(n):
		new[i,j] = min(new[i,j]) + 1
		
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:48:57) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))
a = 0

mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)
for i in range(n):
	for j in range(n):
		new[i,j] = min(new[i]) + 1
		
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:49:44) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))
a = 0

mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)
for i in range(n):
	for j in range(n):
		new[i,j] = min(new[j]) + 1
		
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:50:27) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))
a = 0

mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)
for i in range(n):
	for j in range(n):
		new[j,n] = min(new[j]) + 1
		
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:50:35) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))
a = 0

mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)
for i in range(n):
	for j in range(n):
		new[j,i] = min(new[j]) + 1
		
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:51:51) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))
a = 0

mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)
for i in range(n):
	for j in range(n):
		new[j,i] = min(new[j]) + 1
		
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:52:09) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))
a = 0

mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)
for i in range(n):
	for j in range(n):
		new[i,j] = min(new[j]) + 1
		
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:52:36) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))
a = 0

mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)
for i in range(n):
	for j in range(n):
		new[i,j] = min(new[i]) + 1
		
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:52:49) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))
a = 0

mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)
for i in range(n):
	for j in range(n):
		new[i,j] = min(new[j]) + 1
		
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:53:03) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))
a = 0

mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)
for i in range(n):
	for j in range(n):
		new[i,j] = min(new[i,j]) + 1
		
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:59:01) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))
a = 0

mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)
for i in range(n):
	for j in range(n):
		new[i,j] = min(i,j) + 1
		
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:59:09) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))
a = 0

mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)
for i in range(n):
	for j in range(n):
		new[i,j] = min(i,j) + 1
		
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:59:18) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))
a = 0

mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)
for i in range(n):
	for j in range(n):
		new[i,j] = min(i,j) + 1
		
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 12:01:51) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))
a = 0

mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)
for i in range(n):
	for j in range(n):
		new[i,j] = min(i,j) + 1
		
print(new)
	
-- EXECUTION TIME:
0.939045
-- TEST CASE 1:
---- input:
3
---- correct output:
[[1 1 1]
 [1 2 2]
 [1 2 3]]
---- user output:
[[1 1 1]
 [1 2 2]
 [1 2 3]]
-- TEST CASE 2:
---- input:
8
---- correct output:
[[1 1 1 1 1 1 1 1]
 [1 2 2 2 2 2 2 2]
 [1 2 3 3 3 3 3 3]
 [1 2 3 4 4 4 4 4]
 [1 2 3 4 5 5 5 5]
 [1 2 3 4 5 6 6 6]
 [1 2 3 4 5 6 7 7]
 [1 2 3 4 5 6 7 8]]
---- user output:
[[1 1 1 1 1 1 1 1]
 [1 2 2 2 2 2 2 2]
 [1 2 3 3 3 3 3 3]
 [1 2 3 4 4 4 4 4]
 [1 2 3 4 5 5 5 5]
 [1 2 3 4 5 6 6 6]
 [1 2 3 4 5 6 7 7]
 [1 2 3 4 5 6 7 8]]
-- TEST CASE 3:
---- input:
1
---- correct output:
[[1]]
---- user output:
[[1]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 14:36:50) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))
a = 0

mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)
for i in range(n):
	for j in range(n):
		new[i,j] = min(i,j) + 1
		
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 14:37:09) 
-- CODE:
from numpy import*
from numpy.linalg import*


n = int(input("digite um numero; "))
a = 0

new = zeros((n,n),dtype=int)
for i in range(n):
	for j in range(n):
		new[i,j] = min(i,j) + 1
		
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
